Fixing the qualdata bug (previous commit was still buggy)

--- a/Report.html
+++ b/Report.html
@@ -1159,39 +1159,39 @@ comments were made, split by familiarity with games.</p>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">ATMSGHelpful</td>
-<td align="right">5</td>
+<td align="left">ATMSGMoreDetailed</td>
+<td align="right">7</td>
 <td align="right">6</td>
-<td align="right">11</td>
+<td align="right">13</td>
 </tr>
 <tr class="even">
-<td align="left">ATMSGMoreDetailed</td>
-<td align="right">8</td>
-<td align="right">3</td>
-<td align="right">11</td>
+<td align="left">ATMSGHelpful</td>
+<td align="right">5</td>
+<td align="right">4</td>
+<td align="right">9</td>
 </tr>
 <tr class="odd">
-<td align="left">LMGMSimpler</td>
-<td align="right">8</td>
-<td align="right">1</td>
+<td align="left">LMGMHelpful</td>
+<td align="right">3</td>
+<td align="right">6</td>
 <td align="right">9</td>
 </tr>
 <tr class="even">
-<td align="left">LMGMHelpful</td>
-<td align="right">3</td>
-<td align="right">5</td>
-<td align="right">8</td>
+<td align="left">LMGMSimpler</td>
+<td align="right">6</td>
+<td align="right">1</td>
+<td align="right">7</td>
 </tr>
 <tr class="odd">
-<td align="left">ATMSGBetterDiagram</td>
-<td align="right">0</td>
-<td align="right">5</td>
-<td align="right">5</td>
-</tr>
-<tr class="even">
 <td align="left">ATMSGNeedsExplanation</td>
 <td align="right">2</td>
 <td align="right">2</td>
+<td align="right">4</td>
+</tr>
+<tr class="even">
+<td align="left">ATMSGNeedsSimplifying</td>
+<td align="right">4</td>
+<td align="right">0</td>
 <td align="right">4</td>
 </tr>
 <tr class="odd">
@@ -1201,27 +1201,27 @@ comments were made, split by familiarity with games.</p>
 <td align="right">4</td>
 </tr>
 <tr class="even">
-<td align="left">LMGMEasier</td>
-<td align="right">1</td>
-<td align="right">3</td>
-<td align="right">4</td>
-</tr>
-<tr class="odd">
-<td align="left">ATMSGFillsObjective</td>
-<td align="right">0</td>
-<td align="right">3</td>
-<td align="right">3</td>
-</tr>
-<tr class="even">
-<td align="left">ATMSGHigherLearningCurve</td>
+<td align="left">ATMSGHadSampleAnalysis</td>
 <td align="right">1</td>
 <td align="right">2</td>
 <td align="right">3</td>
 </tr>
 <tr class="odd">
-<td align="left">ATMSGNeedsSimplifying</td>
+<td align="left">ATMSGHard</td>
+<td align="right">1</td>
+<td align="right">2</td>
 <td align="right">3</td>
-<td align="right">0</td>
+</tr>
+<tr class="even">
+<td align="left">LMGMEasier</td>
+<td align="right">1</td>
+<td align="right">2</td>
+<td align="right">3</td>
+</tr>
+<tr class="odd">
+<td align="left">LMGMMoreFocused</td>
+<td align="right">1</td>
+<td align="right">2</td>
 <td align="right">3</td>
 </tr>
 <tr class="even">
@@ -1231,39 +1231,51 @@ comments were made, split by familiarity with games.</p>
 <td align="right">3</td>
 </tr>
 <tr class="odd">
-<td align="left">ATMSGHard</td>
+<td align="left">ATMSGBetterDiagram</td>
+<td align="right">0</td>
+<td align="right">2</td>
+<td align="right">2</td>
+</tr>
+<tr class="even">
+<td align="left">ATMSGBetterUnderstanding</td>
+<td align="right">1</td>
+<td align="right">1</td>
+<td align="right">2</td>
+</tr>
+<tr class="odd">
+<td align="left">ATMSGHigherLearningCurve</td>
 <td align="right">1</td>
 <td align="right">1</td>
 <td align="right">2</td>
 </tr>
 <tr class="even">
+<td align="left">LMGMHard</td>
+<td align="right">0</td>
+<td align="right">2</td>
+<td align="right">2</td>
+</tr>
+<tr class="odd">
 <td align="left">LMGMHardGameMap</td>
 <td align="right">0</td>
 <td align="right">2</td>
 <td align="right">2</td>
 </tr>
+<tr class="even">
+<td align="left">LMGMInvitesMoreThinking</td>
+<td align="right">1</td>
+<td align="right">1</td>
+<td align="right">2</td>
+</tr>
 <tr class="odd">
 <td align="left">LMGMLowerLearningCurve</td>
-<td align="right">0</td>
-<td align="right">2</td>
+<td align="right">1</td>
+<td align="right">1</td>
 <td align="right">2</td>
 </tr>
 <tr class="even">
-<td align="left">LMGMMoreFocused</td>
-<td align="right">1</td>
-<td align="right">1</td>
-<td align="right">2</td>
-</tr>
-<tr class="odd">
 <td align="left">ATMSGBetterTaxonomy</td>
 <td align="right">0</td>
 <td align="right">1</td>
-<td align="right">1</td>
-</tr>
-<tr class="even">
-<td align="left">ATMSGBetterUnderstanding</td>
-<td align="right">1</td>
-<td align="right">0</td>
 <td align="right">1</td>
 </tr>
 <tr class="odd">
@@ -1279,7 +1291,7 @@ comments were made, split by familiarity with games.</p>
 <td align="right">1</td>
 </tr>
 <tr class="odd">
-<td align="left">ATMSGHadSampleAnalysis</td>
+<td align="left">ATMSGFillsObjective</td>
 <td align="right">0</td>
 <td align="right">1</td>
 <td align="right">1</td>
@@ -1291,45 +1303,33 @@ comments were made, split by familiarity with games.</p>
 <td align="right">1</td>
 </tr>
 <tr class="odd">
-<td align="left">ATMSGNotSoHelpful</td>
-<td align="right">0</td>
-<td align="right">1</td>
-<td align="right">1</td>
-</tr>
-<tr class="even">
 <td align="left">ATMSGRepetitive</td>
 <td align="right">1</td>
 <td align="right">0</td>
 <td align="right">1</td>
 </tr>
-<tr class="odd">
-<td align="left">ATMSGTaxonomyNeedsRevision</td>
+<tr class="even">
+<td align="left">ATMSGTooDetailed</td>
 <td align="right">0</td>
 <td align="right">1</td>
 <td align="right">1</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">BothModelsSimilar</td>
 <td align="right">1</td>
 <td align="right">0</td>
 <td align="right">1</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">DifficultGame</td>
 <td align="right">1</td>
 <td align="right">0</td>
 <td align="right">1</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">LMGMClearer</td>
 <td align="right">1</td>
 <td align="right">0</td>
-<td align="right">1</td>
-</tr>
-<tr class="odd">
-<td align="left">LMGMInvitesMoreThinking</td>
-<td align="right">0</td>
-<td align="right">1</td>
 <td align="right">1</td>
 </tr>
 <tr class="even">
@@ -1339,27 +1339,27 @@ comments were made, split by familiarity with games.</p>
 <td align="right">1</td>
 </tr>
 <tr class="odd">
-<td align="left">LMGMNeedsExplanation</td>
+<td align="left">LMGMMoreSuperficial</td>
 <td align="right">0</td>
 <td align="right">1</td>
 <td align="right">1</td>
 </tr>
 <tr class="even">
-<td align="left">LMGMNeedsMoreDetails</td>
-<td align="right">1</td>
+<td align="left">LMGMNotSoHelpful</td>
 <td align="right">0</td>
+<td align="right">1</td>
 <td align="right">1</td>
 </tr>
 <tr class="odd">
-<td align="left">LMGMNotUnderstood</td>
-<td align="right">0</td>
-<td align="right">1</td>
-<td align="right">1</td>
-</tr>
-<tr class="even">
 <td align="left">LMGMSomewhatHelpful</td>
 <td align="right">1</td>
 <td align="right">0</td>
+<td align="right">1</td>
+</tr>
+<tr class="even">
+<td align="left">LMGMTaxonomyNeedsRevision</td>
+<td align="right">0</td>
+<td align="right">1</td>
 <td align="right">1</td>
 </tr>
 <tr class="odd">
